<resources>
    <string name="app_name">BlackJack_Assignment1</string>
    <string name="blackjack">BlackJack!</string>
    <string name="objective">Try and make the sum of your cards higher than the sum of the
         dealers cards, without going over 21.</string>
    <string name="david">David Roach</string>
    <string name="thomas">Thomas Crozier</string>
    <string name="dev_by">Developed By:</string>
    <string name="year">2017</string>
    <string name="class_section">CSCI 4020 W1</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="game_rules">**Put Rules Here**</string>
    <string name="chip_label">$ 100 </string>
    <string name="bet_label">Bet:</string>
    <string name="hit_label">Hit me!</string>
    <string name="stand_label">Stand</string>
    <string name="dealer_score">Dealer:</string>
    <string name="your_score">You:</string>
    <string name="dialog_title"></string>
    <string name="dialog_message">Place Your bet:</string>
    <string name="ok">Ok</string>
    <string name="card_values_title">Card Values</string>
    <string name="hit_desc">Hit: Draw another card to the hand.</string>
    <string name="stand_desc">Stand: Stop at the current total.</string>
    <string name="card_num_value">Number Value of Card</string>
    <string name="face_num_value">Face = 10</string>
    <string name="ace_num_value">1 OR 11</string>
    <string name="player_choices_title">Player Choices</string>
</resources>