<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_game"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        tools:context="com.davidroach.blackjack_assignment1.GameActivity"
        android:background="@drawable/background">


 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="300dp"
     android:id="@+id/game_board">

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:id="@+id/dealer_section">


   <TextView
       android:text="@string/your_score"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/player_score_tv"
       android:layout_weight="1"
       android:textColor="@android:color/white"
       android:textSize="20sp" />

   <TextView
       android:text="@string/dealer_score"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/dealer_score_tv"
       android:layout_weight="1"
       android:textColor="@android:color/white"
       android:textSize="20sp" />
  </LinearLayout>

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:id="@+id/player_section">


  </LinearLayout>














 </LinearLayout>

 <Button
     android:text="@string/hit_label"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/hit_button" />

 <Button
     android:text="@string/stand_label"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/stand_button" />

 <TextView
     android:text="@string/chip_label"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/chip_tv"
     android:textSize="20sp"
     android:textColor="@android:color/white" />

 <TextView
     android:text="0"
     android:layout_width="324dp"
     android:layout_height="20dp"
     android:id="@+id/chip_count_tv"
     android:textColor="@android:color/white"
     android:textSize="20sp" />
</LinearLayout>

